# eval-user-profiles

./: .env-example  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
data/: base_profile.txt
eval_user_profiles/: hosting.py
eval_user_profiles/models/: comparison_result.py
eval_user_profiles/protocols/: i_azure_openai_service.py  i_user_profile_comparator.py  i_user_profile_generator.py
eval_user_profiles/services/: azure_openai_service.py  user_profile_comparator.py  user_profile_generator.py
experiments/: test.py
tests/eval_user_profiles/services/: test_azure_openai_service.py  test_user_profile_comparator.py  test_user_profile_generator.py
